--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>HEllo World</title>
+    <title>Hello World</title>
 </head>
 <body>
 <h1>Hello world!!!!</h1>
